changed Mourad to Svitlana

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head name="Mourad">
+  <head name="Svitlana">
     <meta charset="utf-8">
     <title>My fifth commit</title>
   </head>
