--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head name="Svitlana">
+  <head name="Svitlana my love">
     <meta charset="utf-8">
     <title>Making changes to master</title>
   </head>
   <body>
+    <h1>Whatever</h1>
+
 
   </body>
 </html>
